# WSServer

./: .gitmodules  CMakeLists.txt  README.md
cmake/: FindSQLite3.cmake  externals.cmake  projects.cmake
impl/chat/: CMakeLists.txt
impl/chat/src/: Chat.cpp  Chat.h  main.cpp
impl/red/: CMakeLists.txt
impl/red/src/: RED.cpp  RED.h  main.cpp
include/: CMakeLists.txt  debug.h  server.h
include/client/: client.h  clientmanager.h  events.h  manager.h  statebased_manager.h
include/db/: dbhandler.h
include/error/: error.h
include/ext/modules/: base_module.h  client_timer.h  pub_sub.h
include/ext/sessions/: sessiondb.h  sessionmanager.h
include/mocks/: client_mock.h  socket_mock.h
include/protocol/: constant.h  frame.h  http.h  packet.h  processor.h
include/server/: config.h  errors.h  server.h  socket.h
include/sockets/: processor.h  socket.h  tcp.h  udp.h
include/sockets/processor/: http.h  http_base.h  processor.h  tcp.h  udp.h  websocket.h
include/sockets/server/: socket.h  tcp.h  udp.h
include/util/: algo.h  base64.h  date.h  exception.h  genericvalue.h  safedeque.h  sha1.h  string.h  synchronizedpool.h  timer.h  worker.h
lib/: CMakeLists.txt
libs/: CMakeLists.txt
libs/rapidjson/: CMakeLists.txt  document.h  fwd.h  pointer.h  prettywriter.h  rapidjson.h  reader.h  schema.h  writer.h
libs/rapidjson/error/: en.h
libs/rapidjson/internal/: strfunc.h
libs/rapidjson/msinttypes/: stdint.h
logs/: frame.txt
src/: CMakeLists.txt  debug.cpp  debug.h  main.cpp  main_state.cpp  server.cpp  test.cpp
src/cfg/: config.cpp
src/client/: client.cpp  client.h  clientmanager.cpp  events.cpp  manager.cpp  manager.h  statebased_manager.cpp  statebased_manager.h
src/client/manager/: manager.cpp  manager.h  statebased_manager.cpp  statebased_manager.h
src/db/: DatabaseHandler.cpp  DatabaseHandler.h  dbhandler.cpp  dbhandler.h  sessiondb.cpp  sessiondb.h
src/error/: error.cpp
src/ext/modules/: base_module.cpp  base_module.h  client_timer.cpp  client_timer.h  pub_sub.cpp  pub_sub.h
src/ext/sessions/: sessiondb.cpp  sessiondb.h  sessionmanager.cpp  sessionmanager.h
src/impl/: Chat.cpp  Chat.h  RED.cpp  RED.h
src/modules/: base_module.cpp  base_module.h  client_timer.h  pub_sub.cpp  pub_sub.h  sessionmanager.cpp  sessionmanager.h
src/protocol/: constant.h  frame.cpp  frame.h  http.cpp  http.h  opcode.cpp  opcode.h  packet.cpp  packet.h  processor.cpp  statuscode.h
src/protocol/packet/: packet.cpp  packet.h
src/server/: config.cpp  config.h  errors.cpp  errors.h  server.cpp  server.h  socket.cpp
src/sockets/: processor.cpp  socket.cpp  tcp.cpp  udp.cpp
src/sockets/processor/: http.cpp  http_base.cpp  processor.cpp  tcp.cpp  udp.cpp  websocket.cpp
src/sockets/server/: socket.cpp  tcp.cpp  udp.cpp
src/util/: algo.cpp  base64.cpp  date.cpp  exception.h  genericvalue.cpp  genericvalue.h  sha1.cpp  string.h  synchronizedpool.h  timer.cpp  timer.h  worker.cpp  worker.h
tests/: CMakeLists.txt  client_test.cpp  floatdata_test.cpp  intdata_test.cpp  jsonparse_test.cpp  main_tests.cpp  modules_test.cpp  nulldata_test.cpp  safedeque_test.cpp  stringdata_test.cpp  time_test.cpp  worker_test.cpp
tests/unit_tests/: CMakeLists.txt  arraydata_test.cpp  booldata_test.cpp  client_test.cpp  floatdata_test.cpp  intdata_test.cpp  jsonparse_test.cpp  modules_test.cpp  nulldata_test.cpp  objectdata_test.cpp  stringdata_test.cpp
